<resources>
    <string name="app_name">PopNote</string>
    <string name="edit_note_title">Note</string>
    <string name="accessibility_service_description">Permet à PopNote de détecter l\'ouverture des applications sélectionnées afin d\'afficher votre note.</string>
    <string name="enable_accessibility">Activer la détection (Accessibilité)</string>
    <string name="enable_overlay">Autoriser l\'affichage par-dessus les autres apps</string>
    <string name="status_enabled">Activé</string>
    <string name="status_disabled">Désactivé</string>
    <string name="save">Enregistrer</string>
    <string name="close">Fermer</string>
    <string name="note_hint">Écris ta note ici…</string>
    <string name="apps_section_title">Applications à surveiller</string>
</resources>
